--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @use './components/VideoList.scss';
 @use './styles/global';
 @use './components/NavBar.scss';
+@use './styles/partials/colors';
 .App {
   text-align: center;
 }
