--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -13,6 +13,8 @@
         height: 40px;
         width: 40px;
         border-radius: 50%;
+        background-image: url("../assets/images/Mohan-muruge.jpg");
+        background-size: cover;
 
     }
     &__content{
@@ -47,7 +49,7 @@
         border: 1px solid $BrainFlix-Silver;
         height: 36px;
         border-radius: 4px;
-        width: 100%;
+        width: 75%;
         margin-right: 1rem;
         
   
