--- a/src/components/VideoComments.scss
+++ b/src/components/VideoComments.scss
@@ -42,7 +42,6 @@
     border-radius: 50%;
     background-color: $BrainFlix-Silver;
     margin: 1rem 1rem 0 0;
-
   }
   &__date {
     color: $BrainFlix-Silver;
@@ -59,6 +58,9 @@
     border: none;
     color: $BrainFlix-White;
     font-weight: 700;
+    &:hover {
+      background-color: $BrainFlix-DarkBlue;
+    }
   }
   &__label {
     color: $BrainFlix-Silver;
