--- a/src/components/VideoList.scss
+++ b/src/components/VideoList.scss
@@ -2,19 +2,18 @@
 @use "../styles/partials/colors" as *;
 
 .video {
- 
   &__thumb {
     width: 7.5rem;
     border-radius: 4px;
     object-fit: cover;
     max-height: 65px;
     margin-right: 1rem;
-    &--container{
+    &--container {
       margin-bottom: -1rem;
       display: flex;
       align-items: center;
     }
-    &--title{
+    &--title {
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
@@ -23,36 +22,34 @@
       max-width: 50vw;
       font-size: 0.95rem;
       line-height: 1.25rem;
-      font-weight: 700
-
+      font-weight: 700;
     }
-    &--channel{
+    &--channel {
       font-size: 0.95rem;
       line-height: 1.25rem;
     }
-    &--details{
+    &--details {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       height: 65px;
-
     }
   }
 }
-.list{
+.list {
   @include centered-column;
 
-  &__title{
+  &__title {
     color: $BrainFlix-Silver;
     font-size: 0.875rem;
     font-weight: 700;
     margin-top: 1.5rem;
     margin-bottom: 0.5rem;
   }
-  &__container{
-   width: 90vw;
+  &__container {
+    width: 90vw;
   }
-  &__item{
+  &__item {
     display: flex;
     margin: 1rem 0;
   }
