--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1,7 +1,17 @@
-
 @mixin centered-column {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+@mixin for--tablet {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+@mixin for--desktop {
+  @media (min-width: 1280px) {
+    @content;
+  }
 }
