--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -20,12 +20,19 @@
     padding-bottom: 1rem;
     justify-content: space-between;
     width: 90vw;
+    @include for--tablet{
+        flex-direction: row;
+    }
   }
   &__input--container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    @include for--tablet{
+        justify-content: end;
+    }
+
   }
 
   &__button {
@@ -42,6 +49,27 @@
     &:hover {
       background-color: $BrainFlix-DarkBlue;
     }
+    @include for--tablet{
+        display: none;
+    }
+    &--horizontal {
+        @media (max-width: 768px) {
+            display: none;
+        }
+        background: url("../assets/images/Icons/upload.svg") no-repeat 0.5rem center;
+        min-width: 150px;
+        height: 40px;
+        margin: 0 1rem;
+        background-color: $BrainFlix-Blue;
+        border-radius: 4px;
+        border: none;
+        color: $BrainFlix-White;
+        font-weight: 700;
+        &:hover {
+          background-color: $BrainFlix-DarkBlue;
+        }
+    }
+    
   }
   &__input-el {
     background: url("../assets/images/Icons/search.svg") no-repeat 0.5rem center;
@@ -52,5 +80,8 @@
     width: 75%;
     margin-right: 1rem;
     color: $BrainFlix-DarkBlack;
+    @include for--tablet{
+        width: 240px;
+    }
   }
 }
