--- a/src/components/VideoPlayer.scss
+++ b/src/components/VideoPlayer.scss
@@ -15,7 +15,7 @@
     width: 90vw;
     overflow-wrap: break-word;
     display: flex;
-    border-bottom: 2px solid $BrainFlix-Mercury;
+    @include divider;
     padding-bottom: 1rem;
     @include for--tablet{
         justify-content: space-between;
@@ -26,7 +26,7 @@
     font-size: 1.8rem;
     width: 90vw;
     font-weight: 700;
-    border-bottom: 2px solid $BrainFlix-Mercury;
+    @include divider;
     padding-bottom: 1rem;
     @include for--tablet{
         border-bottom: none;
