--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,25 @@
 @use './components/NavBar.scss';
 @use './styles/partials/colors';
 @use './components/VideoComments.scss';
+@use './components/VideoDetails.scss';
+@use './styles/partials/mixins' as*;
 .App {
   text-align: center;
 }
+
+.page{
+  &__desktop-layout{
+    @include for--desktop{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  &__container{
+    @include for--desktop{
+    width: 80vw;
+    display: flex;
+  }
+  }
+}
+
