bugfix | minor visual
npm rebuilt

minor visual changes

--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -20,11 +20,11 @@
     padding: 0.5rem;
     justify-content: space-between;
     width: 90vw;
-    @include for--tablet{
-        flex-direction: row;
+    @include for--tablet {
+      flex-direction: row;
     }
-    @include for--desktop{
-        width: 80vw;
+    @include for--desktop {
+      width: 80vw;
     }
   }
   &__input--container {
@@ -32,10 +32,9 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    @include for--tablet{
-        justify-content: end;
+    @include for--tablet {
+      justify-content: flex-end;
     }
-
   }
 
   &__button {
@@ -52,30 +51,30 @@
     &:hover {
       background-color: $BrainFlix-DarkBlue;
     }
-    @include for--tablet{
-        display: none;
+    @include for--tablet {
+      display: none;
     }
     &--horizontal {
-        @media (max-width: 768px) {
-            display: none;
-        }
-        background: url("../assets/images/Icons/upload.svg") no-repeat 0.5rem center;
-        min-width: 150px;
-        height: 40px;
-        margin: 0 1rem;
-        background-color: $BrainFlix-Blue;
-        border-radius: 4px;
-        border: none;
-        color: $BrainFlix-White;
-        font-weight: 700;
-        &:hover {
-          background-color: $BrainFlix-DarkBlue;
-        }
-        @include for--desktop{
-            margin: 0 2rem 0 0.5rem;
-        }
+      @media (max-width: 768px) {
+        display: none;
+      }
+      background: url("../assets/images/Icons/upload.svg") no-repeat 0.5rem
+        center;
+      min-width: 150px;
+      height: 40px;
+      margin: 0 1rem;
+      background-color: $BrainFlix-Blue;
+      border-radius: 4px;
+      border: none;
+      color: $BrainFlix-White;
+      font-weight: 700;
+      &:hover {
+        background-color: $BrainFlix-DarkBlue;
+      }
+      @include for--desktop {
+        margin: 0 2rem 0 0.5rem;
+      }
     }
-    
   }
   &__input-el {
     background: url("../assets/images/Icons/search.svg") no-repeat 0.5rem center;
@@ -86,8 +85,8 @@
     width: 75%;
     margin-right: 1rem;
     color: $BrainFlix-DarkBlack;
-    @include for--tablet{
-        width: 206px;
+    @include for--tablet {
+      width: 206px;
     }
   }
 }
