--- a/src/components/VideoComments.scss
+++ b/src/components/VideoComments.scss
@@ -8,8 +8,8 @@
   &__section {
     width: 90vw;
     @include centered-column;
-    @include for--desktop{
-        width: auto
+    @include for--desktop {
+      width: auto;
     }
   }
   &__input {
@@ -37,6 +37,8 @@
       margin-right: 1rem;
       height: 5rem;
       resize: none;
+      font-family: "AvenirNextLTPro";
+      color: $BrainFlix-DarkBlack;
 
       @include for--tablet {
         height: 18px;
@@ -50,7 +52,7 @@
       @include for--tablet {
         display: flex;
         align-items: center;
-        justify-content: end;
+        justify-content: flex-end;
         margin-top: -8px;
       }
     }
@@ -60,19 +62,18 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: -1.65rem;
-    @include for--desktop{
-        margin-right: 1rem;
+    @include for--desktop {
+      margin-right: 1rem;
     }
   }
   &__item {
     display: flex;
     @include divider;
-    @include for--desktop{
-        border-top: 1px solid $BrainFlix-Mercury;
-        margin-top: -1px;
-        width: 100%;
-        padding-right: 1.5rem;
-
+    @include for--desktop {
+      border-top: 1px solid $BrainFlix-Mercury;
+      margin-top: -1px;
+      width: 100%;
+      padding-right: 1.5rem;
     }
   }
   &__avatar {
@@ -107,8 +108,8 @@
       margin-bottom: -1px;
       width: 150px;
     }
-    @include for--desktop{
-        margin-right: 1rem;
+    @include for--desktop {
+      margin-right: 1rem;
     }
   }
   &__label {
