--- a/src/styles/partials/_colors.scss
+++ b/src/styles/partials/_colors.scss
@@ -1,5 +1,5 @@
 $BrainFlix-Blue: #0095ff;
-$BrainFlix-DarkBlue: #0065AD;
+$BrainFlix-DarkBlue: #0065ad;
 
 $BrainFlix-Silver: #afafaf;
 $BrainFlix-Mercury: #e1e1e1;
