--- a/src/App.scss
+++ b/src/App.scss
@@ -1,28 +1,27 @@
-@use './components/VideoPlayer.scss';
-@use './components/VideoList.scss';
-@use './styles/global';
-@use './components/NavBar.scss';
-@use './styles/partials/colors';
-@use './components/VideoComments.scss';
-@use './components/VideoDetails.scss';
-@use './styles/partials/mixins' as*;
+@use "./components/VideoPlayer.scss";
+@use "./components/VideoList.scss";
+@use "./styles/global";
+@use "./components/NavBar.scss";
+@use "./styles/partials/colors";
+@use "./components/VideoComments.scss";
+@use "./components/VideoDetails.scss";
+@use "./styles/partials/mixins" as *;
 .App {
   text-align: center;
 }
 
-.page{
-  &__desktop-layout{
-    @include for--desktop{
+.page {
+  &__desktop-layout {
+    @include for--desktop {
       display: flex;
       align-items: center;
       justify-content: center;
     }
   }
-  &__container{
-    @include for--desktop{
-    width: 80vw;
-    display: flex;
-  }
+  &__container {
+    @include for--desktop {
+      width: 80vw;
+      display: flex;
+    }
   }
 }
-
