--- a/src/components/VideoDetails.scss
+++ b/src/components/VideoDetails.scss
@@ -2,11 +2,10 @@
 @use "../styles/partials/colors" as *;
 
 .video-details {
-    &__container{
-        @include centered-column
-    }
-    @include for--desktop{
-        padding-right: 1rem;
-    }
-
+  &__container {
+    @include centered-column;
+  }
+  @include for--desktop {
+    padding-right: 1rem;
+  }
 }
