--- a/src/components/VideoPlayer.scss
+++ b/src/components/VideoPlayer.scss
@@ -4,24 +4,24 @@
 .video {
   font-size: 0.95rem;
   line-height: 1.25rem;
-    &__container{
-        @include centered-column;
-        width: 100vw;
-        background-color: $BrainFlix-DarkBlack;
-    }
+  &__container {
+    @include centered-column;
+    width: 100vw;
+    background-color: $BrainFlix-DarkBlack;
+  }
   &__section {
     @include centered-column;
   }
   &__player {
     width: 100vw;
 
-    @include for--tablet{
-        width: 90vw;
-        position: relative;
+    @include for--tablet {
+      width: 90vw;
+      position: relative;
     }
-    @include for--desktop{
-        width: 70vw;
-        position: relative;
+    @include for--desktop {
+      width: 70vw;
+      position: relative;
     }
   }
   &__card {
@@ -30,14 +30,14 @@
     display: flex;
     @include divider;
     padding-bottom: 1rem;
-    @include for--tablet{
-        justify-content: space-between;
-        margin-top: -1rem;
+    @include for--tablet {
+      justify-content: space-between;
+      margin-top: -1rem;
     }
-    @include for--desktop{
-        width: 100%;
-        align-self: flex-start;
-        padding-right: 2.5rem;
+    @include for--desktop {
+      width: 100%;
+      align-self: flex-start;
+      padding-right: 2.5rem;
     }
   }
   &__title {
@@ -46,12 +46,13 @@
     font-weight: 700;
     @include divider;
     padding-bottom: 1rem;
-    @include for--tablet{
-        border-bottom: none;
+    @include for--tablet {
+      border-bottom: none;
+      font-size: 2.05rem;
     }
-    @include for--desktop{
-        width: auto;
-        align-self:flex-start;
+    @include for--desktop {
+      width: auto;
+      align-self: flex-start;
     }
   }
   &__description {
@@ -59,45 +60,47 @@
     width: 90vw;
     font-size: 0.95rem;
     line-height: 1.4rem;
-    @include for--desktop{
-        width: auto;
+    @include for--desktop {
+      width: auto;
     }
   }
   &__channel {
     font-weight: 700;
-    @include for--tablet{
-        margin-right: 2rem;
+    @include for--tablet {
+      margin-right: 2rem;
     }
   }
   &__date {
     color: $BrainFlix-Silver;
     margin-top: 1rem;
-    @include for--tablet{
-        margin: 0;
+    @include for--tablet {
+      margin: 0;
     }
   }
   &__likes {
     margin-top: 1rem;
-    @include for--tablet{
-        margin: 0 0 0 2rem;
+    align-items: center;
+    display: flex;
+    @include for--tablet {
+      margin: 0 0 0 2rem;
     }
   }
   &__details {
     &-left {
       margin-right: 30vw;
-      @include for--tablet{
+      @include for--tablet {
         display: flex;
-        @include for--desktop{
-            margin-right: 10vw;
+        @include for--desktop {
+          margin-right: 10vw;
         }
-    }
+      }
     }
 
     &-right {
       color: $BrainFlix-Silver;
-      @include for--tablet{
+      @include for--tablet {
         display: flex;
-    }
+      }
     }
     &--icon {
       margin-right: 10px;
