--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,40 +1,34 @@
-
+@font-face {
+  font-family: "AvenirNextLTPro";
+  src: url("../assets/fonts/AvenirNextLTPro-Regular.otf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "AvenirNextLTPro";
+  src: url("../assets/fonts/AvenirNextLTPro-Bold.otf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
 
 body {
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    font-family: 'AvenirNextLTPro', sans-serif;
-    font-weight: 400; /* Light weight */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  font-family: "AvenirNextLTPro", sans-serif;
+  font-weight: 400; /* Light weight */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
-    
-  }
-  
-  h1, h2, h3, h4, h5, h6 {
-    font-family: 'AvenirNextLTPro', sans-serif;
-    font-weight: 700; /* Bold weight */
-  }
-  
-  strong {
-    font-family: 'AvenirNextLTPro', sans-serif;
-    font-weight: 600; /* Demi weight */
-  }
-  
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
-  }
-
-p {
-    //text style for videos with elipsis
-    // white-space: nowrap;
-    // overflow: hidden;
-    // text-overflow: ellipsis;
-  }
-
-  
-  
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "AvenirNextLTPro", sans-serif;
+  font-weight: 700; /* Bold weight */
+}
