--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,6 +1,6 @@
-@use "../styles/partials/mixins" as *;
-@use "../styles/partials/colors" as *;
-@use "../styles/partials/fonts" as *;
+@use "../../styles/partials/mixins" as *;
+@use "../../styles/partials/colors" as *;
+@use "../../styles/partials/fonts" as *;
 
 .nav {
   @include centered-column;
@@ -13,7 +13,7 @@
     height: 40px;
     width: 40px;
     border-radius: 50%;
-    background-image: url("../assets/images/Mohan-muruge.jpg");
+    background-image: url("../../assets/images/Mohan-muruge.jpg");
     background-size: cover;
   }
   &__content {
@@ -39,7 +39,7 @@
   }
 
   &__button {
-    background: url("../assets/images/Icons/upload.svg") no-repeat 0.5rem center;
+    background: url("../../assets/images/Icons/upload.svg") no-repeat 0.5rem center;
     width: 100%;
     min-width: 150px;
     height: 40px;
@@ -59,7 +59,7 @@
       @media (max-width: 768px) {
         display: none;
       }
-      background: url("../assets/images/Icons/upload.svg") no-repeat 0.5rem
+      background: url("../../assets/images/Icons/upload.svg") no-repeat 0.5rem
         center;
       min-width: 150px;
       height: 40px;
@@ -78,7 +78,7 @@
     }
   }
   &__input-el {
-    background: url("../assets/images/Icons/search.svg") no-repeat 0.5rem center;
+    background: url("../../assets/images/Icons/search.svg") no-repeat 0.5rem center;
     padding-left: 30px;
     border: 1px solid $BrainFlix-Silver;
     height: 36px;
