--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -1,5 +1,5 @@
-@use "../styles/partials/mixins" as *;
-@use "../styles/partials/colors" as *;
+@use "../../styles/partials/mixins" as *;
+@use "../../styles/partials/colors" as *;
 
 .video {
   &__thumb {
