--- a/src/components/VideoPlayer/VideoPlayer.scss
+++ b/src/components/VideoPlayer/VideoPlayer.scss
@@ -1,5 +1,5 @@
-@use "../styles/partials/mixins" as *;
-@use "../styles/partials/colors" as *;
+@use "../../styles/partials/mixins" as *;
+@use "../../styles/partials/colors" as *;
 
 .video {
   font-size: 0.95rem;
