Feature | upload page
styling and visuals

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,8 @@
 @use "./components/VideoDetails/VideoDetails.scss";
 @use "./styles/partials/mixins" as *;
 @use "./styles/partials/fonts" as *;
+@use "./components/Upload/Upload.scss" as *;
+
 
 .App {
   text-align: center;
