feature | minor visuals

--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -13,6 +13,7 @@
       max-height: 75px;
     }
     &--container {
+      cursor: pointer;
       margin-bottom: -1rem;
       display: flex;
       align-items: center;
