feature | upload requirements

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -90,8 +90,8 @@
     }
   }
   &__input-el {
-    background: url("../../assets/images/Icons/search.svg") no-repeat 0.5rem
-      center;
+    background: url("../../assets/images/Icons/search.svg") no-repeat 0.5rem center;
+    background-color: $BrainFlix-Alabaster;
     padding-left: 30px;
     border: 1px solid $BrainFlix-Silver;
     height: 36px;
