--- a/src/components/VideoComments/VideoComments.scss
+++ b/src/components/VideoComments/VideoComments.scss
@@ -39,6 +39,7 @@
       resize: none;
       font-family: "AvenirNextLTPro";
       color: $BrainFlix-DarkBlack;
+      background-color: $BrainFlix-Alabaster;
       
         &::placeholder{
           color: $BrainFlix-DarkBlack;
