--- a/src/styles/partials/_colors.scss
+++ b/src/styles/partials/_colors.scss
@@ -8,3 +8,7 @@ $BrainFlix-Black: #323232;
 $BrainFlix-DarkBlack: #000;
 
 $BrainFlix-White: #fff;
+
+$BrainFlix-Alabaster: #fafafa;
+
+$BrainFlix-Red: #d22d2d;
