--- a/src/components/VideoComments/VideoComments.scss
+++ b/src/components/VideoComments/VideoComments.scss
@@ -40,10 +40,10 @@
       font-family: "AvenirNextLTPro";
       color: $BrainFlix-DarkBlack;
       background-color: $BrainFlix-Alabaster;
-      
-        &::placeholder{
-          color: $BrainFlix-DarkBlack;
-        }
+
+      &::placeholder {
+        color: $BrainFlix-DarkBlack;
+      }
 
       @include for--tablet {
         height: 18px;
@@ -94,8 +94,8 @@
     color: $BrainFlix-Silver;
   }
   &__button {
-    background: url("../../assets/images/Icons/add_comment.svg") no-repeat 0.5rem
-      center;
+    background: url("../../assets/images/Icons/add_comment.svg") no-repeat
+      0.5rem center;
     width: 100%;
     min-width: 150px;
     height: 40px;
@@ -122,7 +122,19 @@
     font-size: 0.875rem;
     font-weight: 700;
   }
-.strecher{
-  width: 100%;
-}
+
+  &__scroller {
+    max-height: 60vw;
+    margin: 0;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    @include for--desktop {
+      margin-right: -1.5rem;
+      max-height: 45vw;
+    }
+  }
+
+  .strecher {
+    width: 100%;
+  }
 }
