--- a/src/components/Upload/Upload.scss
+++ b/src/components/Upload/Upload.scss
@@ -73,10 +73,17 @@
     display: flex;
     flex-direction: column;
     padding: 0 5vw 10vw;
-    @include for--tablet {
-      padding: 0;
-    }
+    display: flex;
+    flex-direction: column;
+    padding: 0 5vw 10vw;
+    border-top: 1px solid $BrainFlix-Mercury;
+  
+
+  @include for--tablet {
+    padding: 0;
   }
+  }
+
   &__video-form {
     display: flex;
     flex-direction: column;
