bugfix | folder structure

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@
 @use "./components/VideoDetails/VideoDetails.scss";
 @use "./styles/partials/mixins" as *;
 @use "./styles/partials/fonts" as *;
-@use "./components/Upload/Upload.scss" as *;
+@use "./pages/Upload/Upload.scss" as *;
 
 
 .App {
